# WafflePlusPlus

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt
src/cmake_scripts/: waffle.cmake
src/include/waffle/modules/dump_struct/: dump_struct.h
src/include/waffle/modules/enum_serializer/: enum_serializer.h
src/include/waffle/modules/json_dump/: json_dump.h
src/include/waffle/modules/rest_controller/: rest_controller.h
src/include/waffle/modules/signals/: signals.h
src/lib/: CMakeLists.txt
src/lib/comment/: CMakeLists.txt  comment.cpp  comment.h  comment_test.cpp
src/lib/driver/: CMakeLists.txt  driver.cpp
src/lib/file/: CMakeLists.txt  file.cpp  file.h  file_impl.cpp  file_impl.h  file_test.cpp  i_file.cpp  i_file.h  nice_printer.cpp  nice_printer.h
src/lib/module/: CMakeLists.txt  module.h  registry.cpp  registry.h  registry_test.cpp
src/lib/registry/: CMakeLists.txt  registry.cpp  registry.h  registry_test.cpp
src/lib/string_util/: CMakeLists.txt  string_util.cpp  string_util.h  string_util_test.cpp
src/modules/: CMakeLists.txt
src/modules/data_class/: CMakeLists.txt  collector.cpp  collector.h  common.h  printer.cpp  printer.h  register.cpp  template.cpp
src/modules/data_class/test/: CMakeLists.txt  test.cpp
src/modules/data_class/test/mountains/: mountains.data_class.h  mountains.h
src/modules/dump_struct/: CMakeLists.txt  collector.cpp  collector.h  common.h  module.cpp  module.h  printer.cpp  printer.h  register.cpp  template.cpp
src/modules/dump_struct/test/: CMakeLists.txt  test.cpp
src/modules/dump_struct/test/simple_structs/: simple_structs.dump_struct.cpp  simple_structs.h
src/modules/enum_serializer/: CMakeLists.txt  collector.cpp  collector.h  common.h  module.cpp  module.h  printer.cpp  printer.h  registry.cpp  template.cpp
src/modules/enum_serializer/test/: CMakeLists.txt  test.cpp
src/modules/enum_serializer/test/comment_styles/: comment_styles.cpp  comment_styles.enum_serializer.cpp  temp.cpp
src/modules/enum_serializer/test/custom_names/: custom_names.enum_serializer.cpp  custom_names.h
src/modules/enum_serializer/test/misc_enum_places/: misc_enum_places.enum_serializer.cpp  misc_enum_places.h
src/modules/google_mock/: CMakeLists.txt  collector.cpp  collector.h  common.h  printer.cpp  printer.h  register.cpp  template.cpp
src/modules/google_mock/test/: CMakeLists.txt  test.cpp
src/modules/google_mock/test/turtle/: turtle.gmock.h  turtle.h
src/modules/json_dump/: CMakeLists.txt  collector.cpp  collector.h  common.h  printer.cpp  printer.h  register.cpp  template.cpp
src/modules/json_dump/test/: CMakeLists.txt  test.cpp
src/modules/json_dump/test/books_library/: books_library.h  books_library.json_dump.cpp
src/modules/json_struct/: CMakeLists.txt  collector.cpp  collector.h  common.h  module.cpp  module.h  printer.cpp  printer.h  register.cpp
src/modules/json_struct/test/: CMakeLists.txt
src/modules/json_struct/test/simple_structs/: simple_structs.h
src/modules/poly_ptr/: CMakeLists.txt  collector.cpp  collector.h  common.h  printer.cpp  printer.h  register.cpp  template.cpp
src/modules/poly_ptr/test/: CMakeLists.txt  common.h  poly_obj_test.cpp  poly_ptr_test.cpp  poly_ref_test.cpp  test.cpp
src/modules/poly_ptr/test/structs/: structs.h  structs.poly_ptr.h
src/modules/rest_controller/: CMakeLists.txt  collector.cpp  collector.h  common.h  printer.cpp  printer.h  register.cpp  template.cpp
src/modules/rest_controller/test/: CMakeLists.txt  test.cpp
src/modules/rest_controller/test/employee/: employee.h  employee.json_dump.cpp  employee.rest_controller.cpp  employee.rest_controller.h
src/modules/signals/: CMakeLists.txt  collector.cpp  collector.h  common.h  printer.cpp  printer.h  register.cpp  template.cpp
src/modules/signals/test/: CMakeLists.txt  test.cpp
src/modules/signals/test/counter/: counter.cpp  counter.h  counter.signals.cpp
